Update index.htmlAktualizacja strony głównej – dodano odtwarzacz streamu
Signed-off-by:  Sylwester Joker Sternefm 87,6Mhz FM <p.strzelecki@hotmail.de>

--- a/index.html
+++ b/index.html
@@ -2,25 +2,18 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>STERNEFM – Radio na żywo</title>
-  <style>
-    body {
-      background-color: #000;
-      color: #0ff;
-      font-family: sans-serif;
-      text-align: center;
-      padding-top: 50px;
-    }
-    iframe {
-      border: none;
-      width: 320px;
-      height: 50px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>STERNE FM – Gwiezdna Droga</title>
 </head>
 <body>
-  <h1>🎧 Słuchaj radia STERNEFM</h1>
-  <iframe src="http://myradiostream.com/embed/SylwesterJoker"></iframe>
-  <p>Jeśli nie działa, kliknij ▶️</p>
+  <h1>🌠 STERNE FM</h1>
+  <p>Radio z innej galaktyki</p>
+
+  <audio controls>
+    <source src="https://stream.sternefm.pl/live.mp3" type="audio/mpeg">
+    Twoja przeglądarka nie obsługuje odtwarzacza audio.
+  </audio>
+
+  <p>Dziękujemy, że jesteś z nami! STERNEFM – Gramy, bo lubimy!</p>
 </body>
 </html>
