--- a/index.html
+++ b/index.html
@@ -17,3 +17,11 @@
   <p>Dziękujemy, że jesteś z nami! STERNEFM – Gramy, bo lubimy!</p>
 </body>
 </html>
+<section id="player" style="background: radial-gradient(circle, #0b0c2a, #000); padding: 40px; text-align: center; color: white;">
+  <h2 style="font-family: 'Orbitron', sans-serif;">🔊 Słuchaj STERNE FM</h2>
+  <audio controls style="width: 80%; max-width: 600px; margin-top: 20px;">
+    <source src="https://twoj-stream-url.pl/stream.mp3" type="audio/mpeg">
+    Twoja przeglądarka nie obsługuje odtwarzacza audio.
+  </audio>
+  <p style="margin-top: 10px;">Radio z innej galaktyki – nadajemy na żywo!</p>
+</section>
