--- a/index.html
+++ b/index.html
@@ -9,19 +9,137 @@
   <h1>🌠 STERNE FM</h1>
   <p>Radio z innej galaktyki</p>
 
-  <audio controls>
-    <source src="https://stream.sternefm.pl/live.mp3" type="audio/mpeg">
-    Twoja przeglądarka nie obsługuje odtwarzacza audio.
-  </audio>
+  <!DOCTYPE html>
+<html lang="pl">
+<head>
+  <meta charset="UTF-8" />
+  <title>STERNE FM – Kokpit Galaktyczny</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Audiowide&display=swap" rel="stylesheet" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <style>
+    body, html {
+      margin: 0;
+      overflow: hidden;
+      background-color: black;
+      font-family: 'Orbitron', sans-serif;
+      color: #0ff;
+    }
+    #hud {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      z-index: 10;
+      background: rgba(0,0,0,0.6);
+      padding: 20px;
+      border: 2px solid #0ff;
+      border-radius: 10px;
+      max-width: 300px;
+    }
+    #hud h1 {
+      font-family: 'Audiowide', cursive;
+      margin-bottom: 10px;
+    }
+    audio {
+      width: 100%;
+      border: 2px solid #0ff;
+      border-radius: 10px;
+      margin-top: 10px;
+    }
+    canvas {
+      display: block;
+    }
+    .live-indicator {
+      display: inline-block;
+      background-color: red;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 20px;
+      animation: pulse 1s infinite;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    @keyframes pulse {
+      0% { opacity: 1; }
+      50% { opacity: 0.4; }
+      100% { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+  <div id="hud">
+    <h1>STERNE FM 🚀</h1>
+    <p>Transmisja z pokładu statku – mijamy Marsa, komety i gwiazdy...</p>
+    <audio controls autoplay>
+      <source src="https://s41.myradiostream.com:39624/stream" type="audio/mpeg">
+      Twoja przeglądarka nie obsługuje odtwarzacza audio.
+    </audio>
+    <p class="live-indicator">🔴 LIVE – Nadajemy z orbity kreatywności</p>
+  </div>
 
-  <p>Dziękujemy, że jesteś z nami! STERNEFM – Gramy, bo lubimy!</p>
+  <script>
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer();
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
+
+    const sunLight = new THREE.PointLight(0xffcc66, 2, 200);
+    sunLight.position.set(0, 0, 50);
+    scene.add(sunLight);
+
+    const starGeo = new THREE.SphereGeometry(0.1, 24, 24);
+    const starMat = new THREE.MeshBasicMaterial({ color: 0xffffff });
+    for (let i = 0; i < 300; i++) {
+      const star = new THREE.Mesh(starGeo, starMat);
+      star.position.set(
+        (Math.random() - 0.5) * 200,
+        (Math.random() - 0.5) * 200,
+        (Math.random() - 0.5) * 200
+      );
+      scene.add(star);
+    }
+
+    const loader = new THREE.TextureLoader();
+    const objects = [];
+
+    function createObject(textureURL, size, x, y, z, speed) {
+      const texture = loader.load(textureURL);
+      const geometry = new THREE.SphereGeometry(size, 32, 32);
+      const material = new THREE.MeshStandardMaterial({ map: texture });
+      const obj = new THREE.Mesh(geometry, material);
+      obj.position.set(x, y, z);
+      obj.userData = { speed };
+      scene.add(obj);
+      objects.push(obj);
+    }
+
+    createObject('https://threejsfundamentals.org/threejs/resources/images/planets/mars.jpg', 2, 10, 0, -100, 0.2);
+    createObject('https://threejsfundamentals.org/threejs/resources/images/planets/jupiter.jpg', 3, -15, 5, -120, 0.15);
+    createObject('https://threejsfundamentals.org/threejs/resources/images/planets/earth.jpg', 1.5, 5, -3, -140, 0.1);
+    createObject('https://threejsfundamentals.org/threejs/resources/images/comet.jpg', 1, -8, 2, -160, 0.25);
+
+    camera.position.z = 5;
+
+    function animate() {
+      requestAnimationFrame(animate);
+      objects.forEach(obj => {
+        obj.position.z += obj.userData.speed;
+        obj.rotation.y += 0.01;
+        if (obj.position.z > 10) obj.position.z = -200;
+      });
+      renderer.render(scene, camera);
+    }
+
+    animate();
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
 </body>
 </html>
-<section id="player" style="background: radial-gradient(circle, #0b0c2a, #000); padding: 40px; text-align: center; color: white;">
-  <h2 style="font-family: 'Orbitron', sans-serif;">🔊 Słuchaj STERNE FM</h2>
-  <audio controls style="width: 80%; max-width: 600px; margin-top: 20px;">
-    <source src="https://twoj-stream-url.pl/stream.mp3" type="audio/mpeg">
-    Twoja przeglądarka nie obsługuje odtwarzacza audio.
-  </audio>
-  <p style="margin-top: 10px;">Radio z innej galaktyki – nadajemy na żywo!</p>
-</section>
+</details>
+    
